# ferrum

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build_rest.yml  build_websocket.yml  rust.yml
ferrum-db/: Cargo.toml  sqlx-data.json
ferrum-db/migrations/: 20211028200246_create_server_invites_table.sql  20211101182423_add_flags_to_servers_table.sql
ferrum-db/src/: lib.rs
ferrum-db/src/channels/: models.rs  queries.rs
ferrum-db/src/messages/: models.rs  queries.rs
ferrum-db/src/server_invites/: models.rs  queries.rs
ferrum-db/src/servers/: mod.rs  models.rs  queries.rs
ferrum-db/src/users/: models.rs  queries.rs
ferrum-macros/: Cargo.toml
ferrum-macros/src/: lib.rs
ferrum-shared/: Cargo.toml
ferrum-shared/src/: broker.rs  channels.rs  jwt.rs  lib.rs  messages.rs  server_invites.rs  servers.rs  settings.rs  telemetry.rs  users.rs
ferrum-websocket/: Cargo.toml  Dockerfile
ferrum-websocket/settings/: base.json  testing.json
ferrum-websocket/src/: application.rs  lib.rs  main.rs  messages.rs  server.rs
geplauder/: Cargo.toml  sqlx-data.json
geplauder-macros/: Cargo.toml
geplauder/src/: jwt.rs  settings.rs  utilities.rs
geplauder/src/domain/: users.rs
geplauder/src/routes/: register.rs  websocket.rs
geplauder/src/routes/channels/: create_message.rs  mod.rs
geplauder/src/routes/servers/: create.rs  create_channel.rs  get_users.rs  join.rs
geplauder/src/websocket/: messages.rs  mod.rs  server.rs
geplauder/tests/api/: health_check.rs  helpers.rs  login.rs  register.rs  websockets.rs
geplauder/tests/api/channels/: create_message.rs  get_messages.rs  mod.rs
geplauder/tests/api/servers/: create.rs  create_channel.rs  get.rs  get_channels.rs  get_users.rs  join.rs  mod.rs
geplauder/tests/api/users/: current_user.rs  current_user_servers.rs
migrations/: 20210915111728_create_timestamps_function.sql  20210915122621_create_users_table.sql  20210916143531_create_servers_table.sql  20210916165100_create_users_servers_table.sql  20210919141735_create_channels_table.sql  20210919184457_create_messages_table.sql
settings/: base.json  local.json  testing.json
src/: application.rs  broker.rs  jwt.rs  lib.rs  main.rs  settings.rs  telemetry.rs  utilities.rs
src/domain/: channels.rs  messages.rs  mod.rs  servers.rs  users.rs
src/routes/: login.rs  mod.rs  register.rs  users.rs  websocket.rs
src/routes/channels/: create_message.rs  delete.rs  get_messages.rs  mod.rs  update.rs
src/routes/servers/: create.rs  create_channel.rs  delete.rs  get.rs  get_channels.rs  get_invites.rs  get_users.rs  join.rs  leave.rs  mod.rs  update.rs
src/routes/users/: current_user.rs  current_user_servers.rs  mod.rs  update.rs
src/websocket/: messages.rs  server.rs
tests/api/: health_check.rs  helpers.rs  login.rs  main.rs  register.rs  users.rs  websockets.rs
tests/api/broker/: delete_channel.rs  delete_server.rs  mod.rs  new_channel.rs  new_server.rs  update_channel.rs  update_server.rs  user_joined.rs  user_left.rs
tests/api/channels/: create_message.rs  delete.rs  get_messages.rs  mod.rs  update.rs
tests/api/servers/: create.rs  create_channel.rs  delete.rs  get.rs  get_channels.rs  get_invites.rs  get_users.rs  join.rs  leave.rs  mod.rs  update.rs
tests/api/users/: current_user.rs  current_user_servers.rs  mod.rs  update.rs
tests/api/websocket/: mod.rs  new_message.rs  new_user.rs
