[package]
name = "ferrum"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ferrum"

[dependencies]
actix-http = "3.0.0-beta.9"
actix-web = "4.0.0-beta.8"
config = { version = "0.11", features = ["json"] }
serde = "1.0"
sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tracing = "0.1.19"
tracing-actix-web = "0.4.0-beta.8"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.2"
tracing-log = "0.1.1"