[package]
name = "ferrum"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ferrum"

[workspace]
resolver = "2"
members = [
    ".",
    "ferrum-macros"
]

[dependencies]
actix = "0.12"
actix-http = "3.0.0-beta.10"
actix-web = "4.0.0-beta.9"
actix-web-actors = "4.0.0-beta.7"
actix-web-httpauth = "0.6.0-beta.2"
actix-cors = "0.6.0-beta.2"
actix-codec = "0.4.0"
awc = "3.0.0-beta.8"
anyhow = "1.0.40"
argon2 = { version = "0.3", features = ["std"] }
config = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features= ["std_rng"] }
serde = "1.0"
serde_json = "1.0.61"
sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tracing = "0.1.19"
tracing-actix-web = "0.4.0-beta.8"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.2"
tracing-log = "0.1.1"
thiserror = "1.0.24"
validator = "0.14.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
jsonwebtoken = "7.2"
futures = "0.3"
once_cell = "1.7.2"

[dev-dependencies]
ferrum-macros = { path = "./ferrum-macros" }
actix-rt = "2"
tokio = { version = "1", features = ["macros"] }
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
