[package]
name = "ferrum"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ferrum"

[workspace]
resolver = "2"
members = [
    ".",
    "ferrum-db",
    "ferrum-macros",
    "ferrum-shared",
    "ferrum-websocket"
]

[dependencies]
ferrum-db = { path = "./ferrum-db" }
ferrum-shared = { path = "./ferrum-shared"}
#
actix = "0.13"
actix-http = "3.0.0"
actix-web = "4.0.1"
actix-cors = "0.6.0"
actix-codec = "0.5.0"
anyhow = "1.0.44"
argon2 = { version = "0.3", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features= ["std_rng"] }
serde = "1.0"
serde_json = "1.0.68"
sqlx = { version = "0.5.11", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tracing = "0.1.29"
tracing-actix-web = "0.5.1"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.0", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
thiserror = "1.0.30"
validator = "0.14.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
jsonwebtoken = "7.2"
futures = "0.3"
once_cell = "1.8.0"
lapin = "2.0"
tokio-amqp = "2.0.0"
executor-trait = "2.1.0"

[dev-dependencies]
ferrum-macros = { path = "./ferrum-macros" }
ferrum-websocket = { path = "./ferrum-websocket" }
awc = "3.0.0-beta.21"
actix-rt = "2"
tokio = { version = "1", features = ["macros"] }
fake = "~2.3.0"
claim = "0.5.0"
