[package]
name = "ferrum-shared"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
actix-web = "4.0.0-beta.9"
actix-http = "3.0.0-beta.10"
jsonwebtoken = "7.2"
futures = "0.3"
thiserror = "1.0.24"
config = { version = "0.11", features = ["json"] }
sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
meio = "0.96.0"
tracing = "0.1.19"
tracing-actix-web = "0.4.0-beta.8"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.2"
tracing-log = "0.1.1"

[dev-dependencies]
claim = "0.5.0"
