[package]
name = "ferrum-websocket"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ferrum-websocket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferrum-shared = { path = "../ferrum-shared" }
ferrum-db = { path = "../ferrum-db" }
sqlx = { version = "0.5.9", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = "1.0"
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
tokio-tungstenite = "0.15.0"
futures-util = "0.3.17"
meio = "0.96.0"
async-trait = "0.1.51"
anyhow = "1.0"
lapin = "1.8"
tracing = "0.1.29"